--- a/doc/tutorial/tutorial-clones.tex
+++ b/doc/tutorial/tutorial-clones.tex
@@ -686,8 +686,6 @@ Then you can continue aligning and clustering clones if necessary.
     assert ( $b.scatterplot_y_label.text == "GC content" ), "Correct legend for axe Y for preset 0"
     $b.update_icon.wait_while(&:present?)
     assert ( $b.scatterplot_x_legend(0).text == "?"), "scatterplot_legend X pos 0 for this preset is '?'"
-    assert ( $b.scatterplot_x_legend(1).text == "0"), "scatterplot_legend X pos 1 for this preset is '0'"
-    assert ( $b.scatterplot_y_legend(0).text == "0.40"), "scatterplot_legend Y for this preset is '0.40'"
   end
 \end{verbatim}
 
@@ -765,50 +763,50 @@ In the bar plot mode, pass the mouse over the bars: What happens?}
 
     $b.send_keys 3
     $b.update_icon.wait_while(&:present?)
-    assert ( $b.scatterplot_x_label.text == "clone average read length" ), "Correct legend for axe X for preset 3"
-    assert ( $b.scatterplot_y_label.text == "locus" ), "Correct legend for axe Y for preset 3"
+    assert ( $b.scatterplot_x_label.text == "Read length" ), "Correct legend for axe X for preset 3"
+    assert ( $b.scatterplot_y_label.text == "Locus" ), "Correct legend for axe Y for preset 3"
     #assert ( $b.scatterplot_x_legend(0).text == "20"), "scatterplot_legend X with shortcut/preset XXX is: IGHV1-2"
     #assert ( $b.scatterplot_y_legend(0).text == "IGH"), "scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1"
 
     $b.send_keys 4
     $b.update_icon.wait_while(&:present?)
-    assert ( $b.scatterplot_x_label.text == "clone average read length" ), "Correct legend for axe X for preset 4"
-    assert ( $b.scatterplot_y_label.text == "size" ), "Correct legend for axe Y for preset 4"
+    assert ( $b.scatterplot_x_label.text == "Read length" ), "Correct legend for axe X for preset 4"
+    assert ( $b.scatterplot_y_label.text == "Size" ), "Correct legend for axe Y for preset 4"
     #assert ( $b.scatterplot_x_legend(0).text == "20"), "scatterplot_legend X with shortcut/preset XXX is: IGHV1-2"
     #assert ( $b.scatterplot_y_legend(0).text == "20%"), "scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1"
 
     $b.send_keys 5
     $b.update_icon.wait_while(&:present?)
     assert ( $b.scatterplot_x_label.text == "V/5' gene" ), "Correct legend for axe X for preset 5"
-    assert ( $b.scatterplot_y_label.text == "size" ), "Correct legend for axe Y for preset 5"
+    assert ( $b.scatterplot_y_label.text == "Size" ), "Correct legend for axe Y for preset 5"
     #assert ( $b.scatterplot_x_legend(0).text == "IGHV1-2"), "scatterplot_legend X with shortcut/preset XXX is: IGHV1-2"
     #assert ( $b.scatterplot_y_legend(0).text == "16%"), "scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1"
 
     $b.send_keys 6
     $b.update_icon.wait_while(&:present?)
     assert ( $b.scatterplot_x_label.text == "N length" ), "Correct legend for axe X for preset 6"
-    assert ( $b.scatterplot_y_label.text == "size" ), "Correct legend for axe Y for preset 6"
+    assert ( $b.scatterplot_y_label.text == "Size" ), "Correct legend for axe Y for preset 6"
     #assert ( $b.scatterplot_x_legend(0).text == "?"), "scatterplot_legend X with shortcut/preset XXX is: IGHV1-2"
     #assert ( $b.scatterplot_y_legend(0).text == "55%"), "scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1"
 
     $b.send_keys 7
     $b.update_icon.wait_while(&:present?)
-    assert ( $b.scatterplot_x_label.text == "CDR3 length (nt)" ), "Correct legend for axe X for preset 7"
-    assert ( $b.scatterplot_y_label.text == "size" ), "Correct legend for axe Y for preset 7"
+    assert ( $b.scatterplot_x_label.text == "CDR3 length" ), "Correct legend for axe X for preset 7"
+    assert ( $b.scatterplot_y_label.text == "Size" ), "Correct legend for axe Y for preset 7"
     #assert ( $b.scatterplot_x_legend(0).text == ""), "scatterplot_legend X with shortcut/preset XXX is: IGHV1-2"
     #assert ( $b.scatterplot_y_legend(0).text == ""), "scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1"
 
     $b.send_keys 8
     $b.update_icon.wait_while(&:present?)
     assert ( $b.scatterplot_x_label.text == "J/3' gene" ), "Correct legend for axe X for preset 8"
-    assert ( $b.scatterplot_y_label.text == "size" ), "Correct legend for axe Y for preset 8"
+    assert ( $b.scatterplot_y_label.text == "Size" ), "Correct legend for axe Y for preset 8"
     #assert ( $b.scatterplot_x_legend(0).text == ""), "scatterplot_legend X with shortcut/preset XXX is: IGHV1-2"
     #assert ( $b.scatterplot_y_legend(0).text == ""), "scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1"
 
     $b.send_keys 9
     $b.update_icon.wait_while(&:present?)
-    assert ( $b.scatterplot_x_label.text == "size" ), "Correct legend for axe X for preset 9"
-    assert ( $b.scatterplot_y_label.text == "size (other sample)" ), "Correct legend for axe Y for preset 9"
+    assert ( $b.scatterplot_x_label.text == "Size" ), "Correct legend for axe X for preset 9"
+    assert ( $b.scatterplot_y_label.text == "Size (other)" ), "Correct legend for axe Y for preset 9"
     #assert ( $b.scatterplot_x_legend(0).text == ""), "scatterplot_legend X with shortcut/preset XXX is: IGHV1-2"
     #assert ( $b.scatterplot_y_legend(0).text == ""), "scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1"
 
