--- a/doc/tutorial/tutorial-clones.tex
+++ b/doc/tutorial/tutorial-clones.tex
@@ -712,7 +712,7 @@ In the bar plot mode, pass the mouse over the bars: What happens?}
     $b.div(:id => "visu_bar").click
     $b.update_icon.wait_while(&:present?)
     assert ( $b.scatterplot_x_label.text == "V/5' gene" ), "Correct legend for axe X after switch in bar mode"
-    assert ( $b.scatterplot_y_label.text == "size" ), "Correct legend for axe Y after switch in bar mode"
+    assert ( $b.scatterplot_y_label.text == "Size" ), "Correct legend for axe Y after switch in bar mode"
 
     $b.element(:id => "visu_sp_menu").hover
     $b.div(:id => "visu_plot").click
