--- a/doc/tutorial/tutorial-clones.tex
+++ b/doc/tutorial/tutorial-clones.tex
@@ -30,14 +30,14 @@ is \texttt{IGHV3-9 7/CCCGGA/17 J6*02}.
     assert ( cinfo[:name].text == "IGHV3-9 7/CCCGGA/17 J6*02"), "correct name for first clone"
 
     stats = $b.statsline
-    assert (stats.text.include? '1 clone, 189 991 reads (9.665%)'),  "Correct stats, number of reads and percentage"
+    assert (stats.text.include? '1 clonotype, 189 991 reads (9.665%)'),  "Correct stats, number of reads and percentage: " + stats.text
   end
 \end{verbatim}
 
 
 There are several options to display the V(D)J designation.
 
-\question{In the  \com{settings} menu, under \com{N regions in clone names} select \com{length} to show N zones by their length. Revert to the
+\question{In the  \com{settings} menu, under \com{N regions in clonotype names} select \com{length} to show N zones by their length. Revert to the
   default \com{sequence (when short)} setting to show the full N on short sequences.}
 
 \begin{verbatim}
@@ -73,7 +73,7 @@ There are several options to display the V(D)J designation.
   end
 \end{verbatim}
 
-\question{Try also the options  \com{alleles in clone names} : by selecting \com{always}, the clone
+\question{Try also the options  \com{alleles in clonotype names} : by selecting \com{always}, the clone
   V gene is displayed as \com{IGHV3-9*01}. Revert to the default \com{when not
     *01}. This setting, which is the default, allows to have a more condensed
   V(D)J designation that doesn't make the \com{*01} appear (it is implicit).}
@@ -85,7 +85,7 @@ There are several options to display the V(D)J designation.
     $b.input(:id => "menuAlleleNot_never").click
     $b.update_icon.wait_while(&:present?) # wait update
     cinfo = $b.clone_info("1")
-    assert ( cinfo[:name].text == "IGHV3-9 7/6/17 J6"), "correct name for first clone (menuAlleleNot_never)"
+    assert ( cinfo[:name].text == "IGHV3-9 7/6/17 J6"), "correct name for first clone (menuAlleleNot_never): " + cinfo[:name].text
 
     $b.menu_settings.click
     $b.input(:id => "menuAlleleNot_when_not_01").click
@@ -110,11 +110,11 @@ depending if the top 50 are always the same or always different or, more
 realistically, in-between.
 This number can be increased to a maximum of 100 clones by going to the \com{filter} menu and by putting the
 slider to its right end.
-\question{Notice how the IGH smaller clones percentage (second clone displayed in the list) changes. What was its
+\question{Notice how the IGH smaller clonotypes percentage (second clone displayed in the list) changes. What was its
   initial value? What is it now?}
 
-\reponse{filter set to 50 \fl IGH smaller clones 10.11\,\%\\*
- filter set to 100 \fl IGH smaller clones 8.92\,\%\\*}
+\reponse{filter set to 50 \fl IGH smaller clonotypes 10.11\,\%\\*
+ filter set to 100 \fl IGH smaller clonotypes 8.92\,\%\\*}
 \begin{verbatim}
   def test_B_clones_04_filter_slider
     if not ENV['HEADLESS']
@@ -153,7 +153,7 @@ slider to its right end.
   end
 \end{verbatim}
 
-The \textit{smaller clones} correspond to clones that are not displayed
+The \textit{smaller clonotypes} correspond to clones that are not displayed
 because they are never among the most abundant ones.
 
 
@@ -161,7 +161,7 @@ because they are never among the most abundant ones.
 
 Consider the most abundant clones in the list:  \texttt{IGHV3-9 7/CCCGGA/17 J6*02} and  \texttt{TRGV10 13//5 JP1}.
 Usually we may want to tag them in order to remember them later on.
-\question{Click on the star and choose colored tags for these two clones, such as \texttt{clone 1} or \texttt{clone 2}.
+\question{Click on the star and choose colored tags for these two clones, such as \texttt{clonotype 1} or \texttt{clonotype 2}.
   Notice how the color applies throughout all the views.}
 
 \begin{verbatim}
@@ -194,11 +194,11 @@ Later you may want to filter clones depending on the tags you have chosen.
     assert ($b.clone_in_list("1").present?), "clone 0 is present at starting test"
 
     # Click on tag switch; clone 1 will be hidden
-    $b.info_colorBy.span(title: 'clone 1').click
+    $b.info_colorBy.span(title: 'clonotype 1').click
     $b.update_icon.wait_while(&:present?)
     assert (not $b.clone_in_list("1").present?), "clone 0 is hidden"
 
-    $b.info_colorBy.span(title: 'clone 1').click
+    $b.info_colorBy.span(title: 'clonotype 1').click
     $b.update_icon.wait_while(&:present?)
     assert ($b.clone_in_list("1").present?), "clone 0 is present at the end of the test"
   end
@@ -864,8 +864,8 @@ be similar.
   end
 \end{verbatim}
 
-\question{ Instead of coloring by clone's size, you could also color by
-  \com{clone}. When coloring by \com{clone}, each clone has a random color. Thus in
+\question{ Instead of coloring by clone size, you could also color by
+  \com{clonotype}. When coloring by \com{clonotype}, each clone has a random color. Thus in
   a bar plot, it is a convenient color mode to see the peaks that are due to a
   single clone or to several clones.
   However clones may be very similar. Another option is to color by
@@ -875,7 +875,7 @@ be similar.
 \begin{verbatim}
   def test_B_clones_32_color_by_clone
     select_color = $b.select_list(:id => "color_menu_select")
-    select_color.select("Clone")
+    select_color.select("Clonotype")
     $b.update_icon.wait_while(&:present?)
 
     $b.clone_in_list("0").click
