update test string

--- a/doc/tutorial/tutorial-clones.tex
+++ b/doc/tutorial/tutorial-clones.tex
@@ -315,7 +315,7 @@ After this rename, you can see that the clone is still selected.
     $b.update_icon.wait_while(&:present?)
 
     stats = $b.statsline
-    assert (stats.text.include? '2 clones, 364 027 reads (18.51%)'),  "Correct stats, number of reads and percentage"
+    assert (stats.text.include? '2 clonotypes, 364 027 reads (18.51%)'),  "Correct stats, number of reads and percentage"
   end
 \end{verbatim}
 
