--- a/docker/CHANGELOG
+++ b/docker/CHANGELOG
@@ -3,8 +3,10 @@ This CHANGELOG concerns the Docker images of vidjil.
 We publish here notes to help to update these images.
 See <http://www.vidjil.org/doc/server>
 
-next version
-   -
+vidjil/server:2021-11-03-53b0fc0a
+   - New variable in defs.py: `LDAP` (set it to False by default).
+     Please restart the `workers` container after modifying it.
+   - Database migration: if you encounter a `Duplicate column name 'pre_process_file'` MySQL error, then you should drop the corresponding column in the table : `ALTER TABLE sequence_file DROP COLUMN pre_process_file;`. As this is a new column, dropping it won't have any consequences.
 vidjil/server:2021-04-05-
    - vidjil-algo updated to 2021.04 (from 2020.06)
    - Default backup service now use a volume for initialisation
