doc tutorial; update tutorial Need to be discuss

--- a/doc/tutorial/mastering-vidjil-fr.tex
+++ b/doc/tutorial/mastering-vidjil-fr.tex
@@ -75,7 +75,7 @@ d'information sur l'échantillon en cours.
 
 \subsection{Visualiser les clones}
 
-Dan ce fichier, le clone le plus abondant est \texttt{IGHV3-9 7/CCCGGA/17 J6*02}.
+Dans ce fichier, le clone le plus abondant est \texttt{IGHV3-9 7/CCCGGA/17 J6*02}.
 
 \question{Sélectionnez ce clone, en cliquant sur la liste ou la grille/
 Combien de reads ce clone représente-t-il ?
