doc; update tutorial server part

--- a/doc/tutorial/tutorial-clones.tex
+++ b/doc/tutorial/tutorial-clones.tex
@@ -1,6 +1,6 @@
 \section{Viewing and filtering clones}
 
-If you are not familirize with the vidjil interface, you can go at [www.vidjil.org/doc/user/#the-elements-of-the-vidjil-web-application](https://www.vidjil.org/doc/user/#the-elements-of-the-vidjil-web-application) to understand how are organize the interface of the client and the main content of each panels.
+If you are not familirize with the vidjil interface, you can go at \href{https://www.vidjil.org/doc/user/#the-elements-of-the-vidjil-web-application}{\tt the-elements-of-the-vidjil-web-application} to understand how are organize the interface of the client and the main content of each panels.
 % Le mettre en amont ? 
 
 \subsection{Looking at a clone}
