tuto, trimming of primers sequence
Last part will not work until #5013 is resolved

--- a/doc/tutorial/tutorial-export.tex
+++ b/doc/tutorial/tutorial-export.tex
@@ -20,6 +20,15 @@ We can double check this designation with other popular software.
 Note that data returned by IMGT/V-QUEST is available by clicking on the \textit{i} icon of analyzed clones,
 enabling you to compare the annotations made by the original software and by IMGT/V-QUEST. 
 
+\question{Search clonotype with sequence \textit{GCAGCCTAAAGGCTGAGGACACCCGACAGGGTATGGACGTCTGGGGCCAA} and select it. Repeat the process to get hypermutation value showed in the aligner. Note this value for later comparaison.}
+
+\question{As see previously, change the primer set to \textit{Biomed2} that is the set use for this sequencing.}
+\question{Reopen the settings menu and check the line \textit{trim primers before external analysis}. Relunch imgt analysis and observe variation of hypermutation. Why this is happen ?}
+% A voir avec l'issue #5013
+
+\begin{verbatim}
+\end{verbatim}
+
 \question{You can also directly send the sequences to IMGT/V-QUEST or IgBlast
   by clicking the corresponding buttons. This opens a new page with the
   corresponding websites.}
