tutorial, update normalization value to use.
Now it should be given in percentage.

--- a/doc/tutorial/tutorial-clones.tex
+++ b/doc/tutorial/tutorial-clones.tex
@@ -1049,8 +1049,8 @@ expected concentration is 1\% (.01).
   end
 \end{verbatim}
 
-\question{ Now we will set its concentration to .01 as expected. Click again on
-  the star. In the \com{normalize to} field enter \com{.01} and click \com{ok}.
+\question{ Now we will set its concentration to 1\% as expected. Click again on
+  the star. In the \com{normalize to} field enter \com{1} and click \com{ok}.
   Now, in the graph, this clone should correspond to a straight line at 1\%.}
 \begin{verbatim}
   def test_B_clones_40_normalization
