--- a/doc/tutorial/tutorial-clones.tex
+++ b/doc/tutorial/tutorial-clones.tex
@@ -1,6 +1,6 @@
 \section{Viewing and filtering clones}
 
-If you are not familirize with the vidjil interface, you can go at \href{https://www.vidjil.org/doc/user/#the-elements-of-the-vidjil-web-application}{\tt the-elements-of-the-vidjil-web-application} to understand how are organize the interface of the client and the main content of each panels.
+First-time users are advised to have a look at \href{https://www.vidjil.org/doc/user/#the-elements-of-the-vidjil-web-application}{\tt the-elements-of-the-vidjil-web-application} that describes the main elements of Vidjil.
 % Le mettre en amont ? 
 
 \subsection{Looking at a clone}
@@ -107,7 +107,7 @@ There are several options to display the V(D)J designation.
 
 \subsection{Showing more clones}
 
-By default Vidjil displays the 50 most abundant clones at each time point in scatterplot, and 10 in timeline graph.
+By default Vidjil displays, at each time point, the 50 most abundant clones in the grid, and the 10 most abundant clones in the timeline graph.
 With five time points, we may therefore have from 50 to 250 clones displayed
 depending if the top 50 are always the same or always different or, more
 realistically, in-between.
@@ -210,8 +210,8 @@ Later you may want to filter clones depending on the tags you have chosen.
 This is a way of filtering some clones. This may be useful when we want to
 focus on some specific clones. Some other way of doing so are to filter them by
 their gene names, by their DNA sequences, 
-by locus visibility switch
-or by direct hidding/focusing them after selection.
+by their locus,
+or directly by hidding/focusing some clones.
 \question{In the search box,
   enter \texttt{GGAGTCGGGG} and validate with \texttt{Enter}.  How many sequences are
   left?}
@@ -227,10 +227,11 @@ Note that the search is performed both on the forward and the reverse strand.
 \question{Check that by searching for the reverse complement of the
   sequence: \texttt{CCCCGACTCC}. Do you find the same results as previously?}
 
-Note that you can compose with multiple filter. 
-The list of active filter is showed in the menu filter.
+You can compose several filters:
+The menu filter shows the list of currently active filters.
+
 \question{How can you cancel this filter and view again all the clones?}
-\reponse{In the filter menu, the list of active filter is present and you can remove, one by one, all rules of filtration. You can also remove text filtration by clickiong on the cross above the text field of the clone list.}
+\reponse{In the filter menu, you can remove filters one by one. You can also remove the text filter by clicking on the cross above the clone list.}
 \begin{verbatim}
   def test_B_clones_07_filter_search_area
     ## test that clone are present before filtering
@@ -376,7 +377,7 @@ After this rename, you can see that the clone is still selected.
 \end{verbatim}
 
 \question{To remove this focus, click on the cross next to the search box,
-  above the list or on the corresponding line in filter menu.}
+  above the list or on the corresponding line in the filter menu.}
 \begin{verbatim}
   def test_B_clones_13_remove_filter
     ## test that clone are present after resetting filtering
@@ -549,7 +550,7 @@ By default in the bottom plot (the \textit{grid}), the clones
 
 The sequences of the clones now appear in the bottom part of the browser (the
 \textit{sequence panel}). If many clones are selected you can view more sequences
-by clicking on the \textit{flat up arrow} in the middle of menu bar of sequence panelmoving the mouse above the sequence panel.
+by clicking on the \textit{flat up arrow} in the middle of menu bar of sequence panel.
  
 Then, the sequences in the sequence panel can be visually compared but you can also align
 them to see more easily their similarities.
@@ -648,12 +649,13 @@ Open the \com{cluster} menu at the top of the page, and choose \com{cluster by V
   end
 \end{verbatim}
 
-\subsection{Show and use primers informations}
+\subsection{Show and use primers information}
 
-From the vidjil client, we have the possibility to compute primers positions on the sequence and to switch between multiple predefined primerset (biomed2 and euroclonality-NGS at the moment).
-If primer positon is not supported on the sequence, we will extrapolated from the germline sequence 
-With this information, we are able to compute distance between primer in 5' and in 3' position
-and make a genescan like plot.
+You can show primer positions on the sequence according to predefined primer sets 
+(Biomed-2 and EuroClonality-NGS by default), and display Genescan-like graph 
+using the distance between these positions.
+When the primers are not found in the consensus sequence, their position is
+extrapolated from the germline sequence.
 
 \question{Select the preset \textit{Primers gap} and observe the starting position of each clonotype.}
 \question{Open the settings menu and select the primer set \textit{Biomed2}.}
@@ -665,18 +667,19 @@ and make a genescan like plot.
 This step is computationally intensive and apply on each clonotype of the analysis.
 More samples you have, more time it will take to finish.
 
-\question{You should now see a refresh of the graphic and see a genescan like plot.}
+\question{You should now see a Genescan-like plot.}
 
-This plot show only present clontype, limited to the top 100 by default.
+This plot show only top clontypes, limited to the top 100 by default.
 
-\question{Change the color by value with \textit{Locus} entrie. What do you see ? }
+\question{Change the color by value with \textit{Locus}. What do you see ? }
 
-\question{Change the primer set to \textit{Euroclonality-NGS}. What happen ? }
+\question{Change the primer set to \textit{Euroclonality-NGS}. What happens ? }
 
 \begin{verbatim}
 \end{verbatim}
 
-\reponse{Remarque that some clonotypes become \textit{undefined}. This happen for some particular segment, as \textit{IGH J6} .}
+\reponse{Remark that some clonotypes become \textit{undefined}. 
+This happens for some particular segment, as \textit{IGH J6} .}
 
 
 \subsection{Other metrics and analysis on the clones}
