tutorial script; fix comment

--- a/doc/tutorial/tutorial-clones.tex
+++ b/doc/tutorial/tutorial-clones.tex
@@ -1134,7 +1134,7 @@ expected concentration is 1\% (.01).
     # New color
     cinfo = $b.clone_info("454")
     assert ($b.clone_info('0')[:name].style('color') ==  'rgba(108, 113, 196, 1)' ), "color: "+$b.clone_info('0')[:name].style('color')
-    voir ici car l'action ne correspond pas tout a fait.
+    # voir ici car l'action ne correspond pas tout a fait.
   end
 \end{verbatim}
 
